# p2p_chat

./: .gitignore  CRYPTO_KEYS_FEATURE.md  P2P_IMPROVEMENTS.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: message.dart
lib/screens/: chat_detail_screen.dart  chat_screen.dart  crypto_keys_screen.dart  home_screen.dart  identity_selection_screen.dart  identity_setup_screen.dart  main_navigation_screen.dart  network_info_screen.dart  p2p_diagnostics_screen.dart  peer_chat_screen.dart  profile_screen.dart  settings_screen.dart
lib/utils/: crypto_key_generator.dart  identity_manager.dart  message_database.dart  network_data_cache.dart  p2p_diagnostics.dart  p2p_messaging_service.dart  peer_manager.dart  pin_manager.dart
lib/widgets/: add_peer_dialog.dart  pin_lock_screen.dart  pin_setup_dialog.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: crypto.rs  identity.rs  messaging.rs  mod.rs  network.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_p2p_chat.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_p2p_chat.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
(+14 files in other folders)
