[package]
name = "rust_lib_p2p_chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
bip39 = "2.0"
rand = "0.8"
local-ip-address = "0.6"
ureq = { version = "2.10", features = ["json"] }
network-interface = "2.0"
aes-gcm = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
